src/snapshots/tedi__sink__tests__compute_node_diff_state_changed.snap
---
source: src/sink.rs
expression: diff
---
IssueDiff {
    body_changed: false,
    state_changed: true,
    title_changed: false,
    labels_changed: false,
    comments_to_create: [],
    comments_to_update: [],
    comments_to_delete: [],
    children_to_create: [],
    children_to_delete: [],
}
